--- a/index.html
+++ b/index.html
@@ -164,22 +164,22 @@
 
                     <section class="vertical-center slider">
                         <div>
-                            <img src="./bannEvnmt/1.jpg">
+                            <img class="filmslide" src="./bannEvnmt/1.jpg">
                         </div>
                         <div>
-                            <img src="./bannEvnmt/2.jpg">
+                            <img class="filmslide"  src="./bannEvnmt/2.jpg">
                         </div>
                         <div>
-                            <img src="./bannEvnmt/3.jpg">
+                            <img class="filmslide"  src="./bannEvnmt/3.jpg">
                         </div>
                         <div>
-                            <img src="./bannEvnmt/4.jpg">
+                            <img class="filmslide"  src="./bannEvnmt/4.jpg">
                         </div>
                         <div>
-                            <img src="./bannEvnmt/5.jpg">
+                            <img class="filmslide"  src="./bannEvnmt/5.jpg">
                         </div>
                         <div>
-                            <img src="./bannEvnmt/6.jpg">
+                            <img class="filmslide"  src="./bannEvnmt/6.jpg">
                         </div>
                     </section>
 
