--- a/index.html
+++ b/index.html
@@ -216,17 +216,17 @@
                                 <section class="buttons2 ">
                                     <span class="btn-2 btn-3 "
                                         style="background-image: url(./img-logo/animation.png);  background-position: center; background-size: inherit;">
-                                        <p class="BS" style="position: absolute; padding-top: 150%;">Initiation dessins
+                                        <p class="BS" style="position: absolute; ">Initiation dessins
                                             animés</p>
                                     </span>
                                 </section>
                             </div>
                             <div class="col ">
                                 <section class="buttons2">
-                                    <span class="btn-2 btn-3"
-                                        style="background-image: url(./img-logo/real.png);  background-position: center; background-size: inherit;">
-                                        <p class="BS" style="position: absolute; padding-top: 150%;">Stage réalisation
-                                        </p>
+                                    
+                                    <span class="btn-2 btn-3" style="background-image: url(./img-logo/real.png);  background-position: center; background-size: inherit;">
+                                        <p class="BS" style="position: absolute;">Stage réalisation
+                                    </p>
                                     </span>
                                 </section>
                             </div>
@@ -234,7 +234,7 @@
                                 <section class="buttons2">
                                     <span class="btn-2 btn-3"
                                         style="background-image: url(./img-logo/proj.png);  background-position: center; background-size: inherit;">
-                                        <p class="BS" style="position: absolute; padding-top: 150%;">Projection à la
+                                        <p class="BS" style="position: absolute; ">Projection à la
                                             demande</p>
                                     </span>
                                 </section>
